--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         
         <h2>Book</h2>
         <section class="docblock">
-            <ul><li><a href="stable/latest/book">Latest stable</a></li><li><a href="git/book">Development</a></li></ul>
+            <ul><li><a href="stable/latest/book">Latest stable</a></li></ul>
         </section>
 
         <h2>Documentation</h2>
@@ -51,7 +51,7 @@
             </ul>
         </section>
         <footer>
-            Generated Thu May  5 12:29:12 2022 UTC
+            Generated Sun Sep 11 06:30:25 2022 UTC
         </footer>
     </body>
 </html>
